# RJM

./: README.md  requirements.txt
api/: main.py  results.py  schemas.py
app/: cluster_config.py  config.py  context.py  fields.json  logging.py  requirements.txt  version.py
data_flow/: __init__.py  edge.py  enum_data.py  execution_context.py  executor_manager.py  graph.py  graph_builder.py  graph_executor.py  node.py  node_config.py  node_executor.py  node_executor_factory.py  port.py  requirements.txt  result.py
data_simulation/: .env.example
develop_tools/graph_generator/gg_compiler/cpp_src/: CMakeLists.txt  execute.bat  execute.py
develop_tools/graph_generator/gg_compiler/cpp_src/include/: gg_core.h
develop_tools/graph_generator/gg_compiler/cpp_src/include/lib/: newrcc.h  rcc_utils.h
develop_tools/graph_generator/gg_compiler/cpp_src/include/lib/RJson/: RJson.h
develop_tools/graph_generator/gg_compiler/cpp_src/include/parser/: gg_parser.h
develop_tools/graph_generator/gg_compiler/cpp_src/src/: gg_base.cpp  gg_core.cpp  main.cpp
develop_tools/graph_generator/gg_compiler/cpp_src/src/components/: gg_model.cpp
develop_tools/graph_generator/gg_compiler/cpp_src/src/lib/RJson/: RJson_error.cpp
develop_tools/graph_generator/gg_compiler/cpp_src/src/parser/: gg_parser.cpp
develop_tools/graph_generator/gg_compiler/cpp_src/test/: new_graph.gg  new_graph_result.py  new_graph_result.txt
src/: data_generator.py  database_manager.py  flink_matching_processor.py
test/: bat_get_job_datas.py  bat_get_resume_datas.py  match_resume_to_job.py  (+2 more)
(+500 files in other folders)
